--- a/index.html
+++ b/index.html
@@ -497,11 +497,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <span>ian.moss@ilmc.co.uk</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <span>+44 7710 030165</span>
+                    <span>cv@ilmc.co.uk</span>
                 </div>
             </div>
             <a href="#contact" class="cta-button">Get In Touch</a>
@@ -723,12 +719,6 @@
                         <i class="fas fa-envelope"></i>
                         <h3>Email</h3>
                         <a href="mailto:cv@ilmc.co.uk">cv@ilmc.co.uk</a>
-                    </div>
-                    
-                    <div class="contact-method">
-                        <i class="fas fa-phone"></i>
-                        <h3>Phone</h3>
-                        <a href="">hidden</a>
                     </div>
                     
                     <div class="contact-method">
