--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <span>London, SE12</span>
+                    <span>London</span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
